--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
-	"title": "The Road Not Taken",
+	"title": "Ningen Shikkaku",
 	"files": [
-		"the-road-not-taken/robert-frost.md",
-		"the-road-not-taken/hana-zantovska.md",
-		"the-road-not-taken/tomas-jacko.md"
+		"ningen-shikkaku/ningen-shikkaku-osamu dazai.md",
+		"ningen-shikkaku/no-longer-human-donald-keene.md",
+		"ningen-shikkaku/a-shameful-life-mark-gibeau.md",
+		"ningen-shikkaku/no-longer-human-juliet-winters-carpenter.md"
 	]
 }
